outs/grpo_110400.out
  File "/home/u111169/mgh/grpo.py", line 112
    print('-'*20, f"Question:\n{q}", f"\n\n\nAnswer\n\n\n:\n{answer[0]}", f"\n\n\nResponse\n\n\n:\n{responses[0]}", f"\n\n\nExtracted\n\n\n:\n{extracted_responses[0]}, f"\n\n\nScore\n\n\n:\n{extracted_responses_score[0]}")
                                                                                                                                                                           ^
SyntaxError: unexpected character after line continuation character
#################################################
Panthera Cluster
Job 110400 for user 'u111169'
Finished at: Fri Apr 11 02:17:09 +0330 2025
Job details file : ~/JobSummary/110400.out
================================================
